--- a/JsTask/JsPhotoSlider/assets/css/main.css
+++ b/JsTask/JsPhotoSlider/assets/css/main.css
@@ -52,3 +52,18 @@ button {
     height: 488px;
     width: 868px;
 }
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0.7
+    }
+
+    to {
+        opacity: 1
+    }
+}
